--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
-    "piecon": "^0.5.0"
+    "piecon": "^0.5.0",
+    "progressbar.js": "^1.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
