--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3"
   }
