add serverless to packages and command to run it

--- a/back/package.json
+++ b/back/package.json
@@ -1,4 +1,10 @@
 {
-  "devDependencies": {
-  }
+    "scripts": {
+        "sls:package": "sls package",
+        "sls:remove": "sls remove",
+        "sls:deploy": "sls deploy"
+    },
+    "devDependencies": {
+        "serverless": "^1.38.0"
+    }
 }
