--- a/back/package.json
+++ b/back/package.json
@@ -6,5 +6,8 @@
     },
     "devDependencies": {
         "serverless": "^1.38.0"
+    },
+    "dependencies": {
+        "aws-sdk": "^2.415.0"
     }
 }
