add dynamo permissions to serverless

--- a/back/serverless.yml
+++ b/back/serverless.yml
@@ -26,6 +26,27 @@ provider:
   websocketsApiRouteSelectionExpression: $request.body.action
   profile: pomodoro-staging
   websocketsApiName: pomodoro-${self:provider.stage}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:DeleteItem
+        - dynamodb:GetItem
+        - dynamodb:Scan
+        - dynamodb:UpdateItem
+      Resource:
+        - 'Fn::Join':
+            - ':'
+            - - 'arn:aws:dynamodb'
+              - Ref: 'AWS::Region'
+              - Ref: 'AWS::AccountId'
+              - 'table/pomodoro'
+        - 'Fn::Join':
+            - ':'
+            - - 'arn:aws:dynamodb'
+              - Ref: 'AWS::Region'
+              - Ref: 'AWS::AccountId'
+              - 'table/pomodoro-sessions'
 
 
 functions:
