--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
     "piecon": "^0.5.0",
-    "progressbar.js": "^1.0.1"
+    "progressbar.js": "^1.0.1",
+    "vue-js-modal": "^1.3.28"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
