--- a/front/package.json
+++ b/front/package.json
@@ -9,13 +9,14 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue  --ignore-path ../.gitignore .",
+    "lint": "eslint --ext .js,.vue --fix --ignore-path ../.gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.6.1",
     "progressbar.js": "^1.0.1",
+    "random-words": "^1.1.0",
     "vue-js-modal": "^1.3.28"
   },
   "devDependencies": {
