--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,10 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.6.3",
+    "nuxt": "^2.7.1",
     "progressbar.js": "^1.0.1",
     "random-words": "^1.1.0",
+    "node-fetch": "^2.5.0",
     "vue-js-modal": "^1.3.31"
   },
   "devDependencies": {
